--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -5,6 +5,11 @@ output:
     keep_md: true
 ---
 
+```{r setup, echo=F, message=FALSE}
+# This is to override Rstudio's defaults
+require(knitr)
+opts_chunk$set(fig.path = "figure/")
+```
 
 ## Loading and preprocessing the data
 
